gccida/g0/combine_stack_adjustments_for_block
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_stack_adjustments_for_block/src/regmove.c:2817:13: error: expected identifier or '('
 struct set = single_set_for_csa( insn); 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_stack_adjustments_for_block/src/regmove.c:2821:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src = ( rtx)set[1]; 
            ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_stack_adjustments_for_block/src/regmove.c:2835:26: error: use of undeclared identifier 'machine_mode'
if ( memory_address_p( ( machine_mode)*( ( unsigned __int8 *)dest + 2), global_rtl[2]) ) 
                         ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_stack_adjustments_for_block/src/obj/regmove.o] Error 1
